# clawbridge

./: AGENTS.md  GEMINI.md  README.md  architecture.md  docs.json  main.py  manifesto.md  mint.json  pyproject.toml  test_whatsapp.py
.clawbridge/memory/: long_term.json
.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _imp.data.json  _imp.meta.json  _io.data.json  _io.meta.json  (+256 more)
docs/: introduction.mdx  mint.json  quickstart.mdx
docs/architecture/: folder-structure.mdx  routing.mdx
docs/backends/: agentica.mdx  agno.mdx
examples/: agentica_deploy.py  agno_deploy.py
my-claw-app/: claw.config.yaml
tests/: test_agno_backend.py  test_bridge_runtime.py  test_builders.py  test_channel_policy.py  test_code_first_skill.py  test_dx_yaml.py  test_hermes_features.py  test_multi_agent.py  test_sandbox.py  test_scaffold.py  test_skill_loader.py  test_team.py  test_workspace.py
(+6830 files in other folders)
